[package]
name = "aria2-ws"
version = "0.5.1"
edition = "2021"
description = "An aria2 websocket jsonrpc API with notification support"
repository = "https://github.com/WOo0W/aria2-ws-rs"
license = "MIT"
keywords = ["aria2", "jsonrpc"]
categories = ["api-bindings"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
test-log = "0.2"

[features]
default = []
specta = ["dep:specta"]

[dependencies]
tokio = { version = "1", features = ["sync", "time", "macros", "rt"] }
serde = { version = "1", features = ["derive"] }
specta = { version = "2.0.0-rc.22", optional = true, features = [
    "serde",
    "serde_json",
    "derive",
    "function",
    "indexmap",
    "chrono",
    "url",
    "uuid",
] }
serde_json = "1"
tokio-tungstenite = "0.26"
futures = "0.3"
base64 = "0.22"
snafu = "0.8"
log = "0.4"
serde_with = { version = "3", features = ["chrono"] }
chrono = { version = "0.4", features = ["serde"] }
